fixed images stuck together issue

--- a/main.css
+++ b/main.css
@@ -29,7 +29,6 @@ li {
 }
 
 header {
-    /* background-image: url(images/hero-image4.jpg); */
     background: url(images/hero-image4.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
@@ -57,11 +56,14 @@ a:hover {
      text-decoration: underline;
 }
 
+/* .home-wrapper {
+    height: 100%;;
+} */
+
 main {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    /* background: rgb(50, 78, 99); */
     background: url(images/background-image8.jpg);
     min-height: 300px;
 }
@@ -81,7 +83,8 @@ p {
 
 #projects, #contact {
     font-size: 30px;
-    padding: 5%;
+    /* padding: 5%; */
+    margin: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,13 +96,10 @@ p {
 }
 
 .icon {
-    /* border-style: solid;
-    border-color: white; */
     width: 300px;
 }
 
 button {
-    /* font-family: 'Courier New', Courier, monospace; */
     font-family: 'Montserrat', sans-serif;
     font-size: 13px;
     font-weight: bold;
@@ -110,7 +110,6 @@ button {
     background: rgba(40, 40, 40, 1);
     border: 1px solid white;
     color: white;
-    /* border-radius: 8px; */
 }
 
 button:hover {
@@ -133,11 +132,12 @@ button:hover {
 .js-project-container {
     margin-top: 60px;
     background: url(images/background-image8.jpg);
-}
-
-.height-100 {
     height: 100%;
 }
+
+/* .height-100 {
+    height: 100%;
+} */
 
 .project-title {
     color: white;
@@ -194,8 +194,6 @@ section.technology {
     color: white;
     font-size: 24px;
     font-weight: 100;
-    /* margin-left: 5px;
-    margin-right: 3px; */
 }
 
 .tech-logo {
@@ -208,23 +206,21 @@ section.technology {
 
 .js-contact-container {
     background: url(images/background-image8.jpg);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 100%;
+    height: 100%;
 }
 
 .contact-div {
-    margin-top: 60px;
+    /* margin-top: 60px; */
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .contact-image {
     width: 500px;
-}
-
-.contact-description {
-    max-width: 600px;
 }
 
 footer {
@@ -249,10 +245,6 @@ footer {
         padding: none;
     }
 
-    /* section:nth-child(even) {
-        background-color: #ddd;
-      } */
-
       #about-me {
           display: flex;
           align-items: center;
@@ -262,7 +254,6 @@ footer {
 
       #projects {
           width: 100%;
-          /* background: rgba(40, 40, 40, 1); */
       }
 
       #contact {
@@ -290,7 +281,13 @@ footer {
       }
 
   }
-  
+
+  @media screen and (max-width: 1100px) {
+    .js-project-container {
+      height: auto;
+     }
+  }
+
   @media screen and (max-width: 550px) {
       li {
           display: block;
@@ -316,6 +313,12 @@ footer {
 
       header {
           height: 400px;
+      }
+
+      .tech-wrap {
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
       }
   }
 
